--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
   </div>
 
   <div class='span8'>
-    <h4><i class='icon-anchor'></i> 心路歷程</h4>
+    <h4><i class='icon-road'></i> 心路歷程</h4>
 
     <p>最近我做了一個重大的決定，辭掉工作準備中年轉業，<br />
     至於為什麼做了這個決定，主要是體悟生命無常，不想以後有所遺憾，<br />
