--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
 <section>
   <h4><i class='icon-th-list'></i> 公告</h4>
 
-  <ul class='announce'>
-    <li><i class='icon-li icon-double-angle-right'></i> 即日起至 2013/10/31，訂房即享八折優惠，並將贈送神祕小禮物一份！</li>
+  <ul class='icons-ul'>
+    <li><i class='icon-li icon-double-angle-right'></i>即日起至 2013/10/31，訂房即享八折優惠，並將贈送神祕小禮物一份！</li>
   </ul>
 </section>
 
@@ -24,7 +24,10 @@
 
           <hr class='soften'>
 
-          <p class='text-left'>”老舍. 軌“ 是獨楝一二樓的水泥紅磚房，備有客廳／小廚房／觀景陽台，有一種老房子特有的味道。</p>
+          <p class='text-left'>
+            ”老舍. 軌“ 是獨楝一二樓的水泥紅磚房，有一種老房子特有的味道。<br /><br />
+            地址：台東市中華路一段 586 巷 72 號
+          </p>
         </div>
       </div>
     </div>
@@ -37,7 +40,10 @@
 
           <hr class='soften'>
 
-          <p class='text-left'>”五十藍“ 係位在附近的靜巷，只有家庭的溫馨，沒有豪華的設備，有賓至如歸的感覺。</p>
+          <p class='text-left'>
+            ”五十藍“ 係位在台東大學附近的靜巷，只有家庭的溫馨，沒有豪華的設備，有賓至如歸的感覺。<br /><br />
+            地址：台東市南昌街 112 巷 40 號
+          </p>
         </div>
       </div>
     </div>
