--- a/public/stylesheets/locations.css
+++ b/public/stylesheets/locations.css
@@ -1,4 +1,10 @@
 #map {
+  width: 90%;
   height: 600px;
-  width: 600px;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+ul {
+  line-height: 250%;
 }
