--- a/views/locations.ejs
+++ b/views/locations.ejs
@@ -2,7 +2,28 @@
 <% script('http://maps.google.com/maps/api/js?sensor=false') -%>
 <% stylesheet('/stylesheets/locations.css') -%>
 
-<div id='map'></div>
+<div class='row-fluid'>
+  <section class='span8'>
+    <h4><i class='icon-map-marker'></i> Google 地圖</h4>
+
+    <br />
+
+    <div id='map'></div>
+  </section>
+
+  <div class='span4'>
+    <h4><i class='icon-twitter'></i> 如何抵達</h4>
+
+    <br />
+
+    <ul class='icons-ul'>
+      <li><i class='icon-li icon-hand-right'></i>從火車站，...</li>
+      <br />
+      <li><i class='icon-li icon-hand-right'></i>從飛機場，...</il>
+    </ul>
+  </div>
+</div>
+
 
 <script type='text/javascript'>
   var locations = [['老舍。軌', 22.750763, 121.147551, '台東市中華路一段 586 巷 72 號'], ['五十藍', 22.749140, 121.148573, '台東市南昌街 112 巷 40 號']];
