--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <h4><i class='icon-th-list'></i> 公告</h4>
 
   <ul class='icons-ul'>
-    <li><i class='icon-li icon-double-angle-right'></i>即日起至 2013/10/31，訂房即享八折優惠，並將贈送神祕小禮物一份！</li>
+    <li><i class='icon-li icon-double-angle-right'></i><span id='announce'>即日起至 2013/10/31，訂房即享八折優惠，並將贈送神祕小禮物一份！</span></li>
   </ul>
 </section>
 
@@ -14,29 +14,29 @@
 <section>
   <h4><i class='icon-home'></i> 客房</h4>
 
-  <div class='row-fluid text-center'>
-    <div class='span6'>
+  <div class='row text-center'>
+    <section class='col-md-6 col-sm-6'>
       <h3>老舍･軌</h3>
 
-      <div class='row-fluid'>
-        <div class='span10 offset1'>
-          <img class='img-rounded' width='400px' src='/images/railway-house/index.square.jpg' />
+      <div class='row'>
+        <div class='col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1'>
+          <a href='/rooms/railway-house'><img class='img-rounded' width='100%' src='/images/railway-house/index.square.jpg' /></a>
 
           <hr class='soften'>
 
           <p class='text-left'>
-            ”老舍. 軌“ 是獨楝一二樓的水泥紅磚房，有一種老房子特有的味道。<br /><br />
+            ”老舍·軌“ 是獨楝一二樓的水泥紅磚房，有一種老房子特有的味道。<br /><br />
             地址：台東市中華路一段 586 巷 72 號
           </p>
         </div>
       </div>
-    </div>
-    <div class='span6'>
+    </section>
+    <section class='col-md-6 col-sm-6'>
       <h3>五十藍</h3>
 
-      <div class='row-fluid'>
-        <div class='span10 offset1'>
-          <img class='img-rounded' width='400px' src='/images/fifty-blue/index.square.jpg' />
+      <div class='row'>
+        <div class='col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1'>
+          <a href='/rooms/fifty-blue'><img class='img-rounded' width='100%' src='/images/fifty-blue/index.square.jpg' /></a>
 
           <hr class='soften'>
 
@@ -46,6 +46,6 @@
           </p>
         </div>
       </div>
-    </div>
+    </section>
   </div>
 </section>
