--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,23 +1,53 @@
 body {
   height: 100%;
   padding: 50px;
-  font-family: 'Microsoft Jhenghei', Helvetica, Arial, sans-serif;
-  text-shadow: 0em 0em 0.1em #969696;
+  font-family: 'Roboto', 'ariel' !important;
+  font-weight: 300;
+  text-shadow: 0em 0em 0.11em #969696;
   background-image: url('/images/texture/wood-1.png');
   background-repeat: repeat;
+}
+
+header {
+  margin-top: -3%;
+}
+
+header > h1 {
+  margin-left: 10px;
+  margin-bottom: 2%;
+}
+
+footer {
+  width: 98%;
 }
 
 a {
   color: #00B7FF;
 }
 
+section > h4 {
+  margin-bottom: 10px;
+}
+
 [class^="icon-"]:before, [class*=" icon-"]:before {
   margin-bottom: 10px;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 1024px;
+#content {
+  width: 98%;
+}
+
+.navbar-nav {
+  width: 100%;
+}
+
+.navbar-nav > li {
+  text-align: center;
+  width: 14.28%;
+}
+
+.navbar-nav > li > ul > li {
+  text-align: left;
 }
 
 .soften {
@@ -27,47 +57,4 @@ a {
   background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
   background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
   border: 0;
-}
-
-#drop-item {
-  width: auto;
-}
-
-#text-left {
-  text-align: left;
-}
-
-.navbar {
-  width: 95%;
-  padding-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.navbar .navbar-inner {
-  padding: 0;
-}
-
-.navbar .nav {
-  width: 100%;
-  display: inline-block;
-}
-
-.navbar .nav li {
-  width: 14.28%;
-}
-
-.navbar .nav li a {
-  font-weight: bold;
-  text-align: center;
-}
-
-.navbar .nav li:first-child a {
-  border-left: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.navbar .nav li:last-child a {
-  border-right: 0;
-  border-radius: 0 3px 3px 0;
 }
