--- a/views/locations.ejs
+++ b/views/locations.ejs
@@ -2,16 +2,14 @@
 <% script('http://maps.google.com/maps/api/js?sensor=false') -%>
 <% stylesheet('/stylesheets/locations.css') -%>
 
-<div class='row-fluid'>
-  <section class='span8'>
+<div class='row'>
+  <section class='col-md-8 col-sm-8'>
     <h4><i class='icon-map-marker'></i> Google 地圖</h4>
-
-    <br />
 
     <div id='map'></div>
   </section>
 
-  <div class='span4'>
+  <div class='col-md-4 col-sm-4'>
     <h4><i class='icon-twitter'></i> 如何抵達</h4>
 
     <br />
