--- a/views/locations.ejs
+++ b/views/locations.ejs
@@ -9,7 +9,7 @@
     <div id='map'></div>
   </section>
 
-  <div class='col-md-4 col-sm-4'>
+  <section class='col-md-4 col-sm-4'>
     <h4><i class='icon-twitter'></i> 如何抵達</h4>
 
     <br />
@@ -19,7 +19,7 @@
       <br />
       <li><i class='icon-li icon-hand-right'></i>從飛機場，...</il>
     </ul>
-  </div>
+  </section>
 </div>
 
 
