--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,6 @@
 #announce {
-  color: red;
-  /*font-size: 1.5em;*/
+  color: blue;
+  font-size: 1.3em;
 }
 
 a > img {
@@ -12,7 +12,7 @@ a > img {
 
 a > img:hover {
   opacity: 1;
-  -webkit-transition: all 0.5s ease-in;
-  -moz-transition: all 0.5s ease-in;
-  -o-transition: all 0.5s ease-in;
+  -webkit-transition: all 0 ease-in;
+  -moz-transition: all 0 ease-in;
+  -o-transition: all 0 ease-in;
 }
