--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
       <div class='row'>
         <div class='col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1'>
-          <a href='/rooms/railway-house'><img class='img-rounded' width='100%' src='/images/railway-house/index.square.jpg' /></a>
+          <a href='/rooms/railway-house'><img class='img-rounded intro-img' width='100%' src='/images/railway-house/index.square.jpg' /></a>
 
           <hr class='soften'>
 
@@ -36,7 +36,7 @@
 
       <div class='row'>
         <div class='col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1'>
-          <a href='/rooms/fifty-blue'><img class='img-rounded' width='100%' src='/images/fifty-blue/index.square.jpg' /></a>
+          <a href='/rooms/fifty-blue'><img class='img-rounded intro-img' width='100%' src='/images/fifty-blue/index.square.jpg' /></a>
 
           <hr class='soften'>
 
