--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,13 +29,21 @@ section > h4 {
   margin-bottom: 10px;
 }
 
-.navbar-brand {
-  font-size: 2.3em !important;
-  text-shadow: 0 1px 0 #fff;
+.site-flag {
+  position: absolute;
+  margin-top: -145px;
+  margin-left: 10%;
+  z-index: 1;
+  -webkit-transition: all 0.4s ease-in;
+  -moz-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
 }
 
-.navbar-header > a {
-  text-decoration: none !important;
+.site-flag:hover {
+  margin-top: -80px;
+  -webkit-transition: all 0 ease-in;
+  -moz-transition: all 0 ease-in;
+  -o-transition: all 0 ease-in;
 }
 
 .navbar-header > a:hover,
@@ -51,9 +59,9 @@ section > h4 {
 
 .navbar .nav > li > a {
   color: white;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-in;
-  -o-transition: all 0.3s ease-in;
+  -webkit-transition: all 0.4s ease-in;
+  -moz-transition: all 0.4s ease-in;
+  -o-transition: all 0.4s ease-in;
 }
 
 .navbar .nav > .active > a,
@@ -82,7 +90,7 @@ section > h4 {
 
 #content {
   width: 98%;
-  margin-top: 2%;
+  margin-top: 4%;
 }
 
 .navbar-nav {
