--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -27,14 +27,14 @@
 
 </head>
 <body>
+  <a href='/'><img class='site-flag' src='/images/texture/flag.png' /></a>
   <div class='container'>
     <header class='container'>
-      <div class='navbar-header'><a class='navbar-brand' href='/'><i class='icon-linux'></i> 老舍·軌 Railway House</a></div>
       <nav class='navbar pull-right'>
         <div class='collapse navbar-collapse navbar-ex1-collapse'>
           <ul class='nav navbar-nav'>
             <li><a href='/'>首頁</a></li>
-            <li><a href='/about'>關於我們</a></li>
+            <li><a href='/about'>關於</a></li>
             <li class='dropdown'>
               <a href='/rooms' class='dropdown-toggle' data-toggle='dropdown'>客房介紹</b></a>
               <ul class='dropdown-menu'>
