complete page 'booking'

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,11 +2,11 @@
 <% stylesheet('/stylesheets/about.css') -%>
 
 <section class='row'>
-  <div class='col-md-4 col-sm-4 text-center'>
+  <div class='col-md-5 col-sm-5 text-center'>
       <img class='img-rounded img-door' src='images/railway-house/door.jpg' />
   </div>
 
-  <div class='col-md-8 col-sm-8'>
+  <div class='col-md-7 col-sm-7'>
     <h4><i class='icon-road'></i> 心路歷程</h4>
 
     <p>最近我做了一個重大的決定，辭掉工作準備中年轉業，<br />
@@ -28,7 +28,8 @@
     <br />三年前也開始接觸荒野保護協會，<br />
     對於大自然的召喚我無法抗拒，<br />
     決定放更多心力去做荒野保護協會的志工講師，<br />
-    同時明年開始負責台東荒野“週五見“，每月在誠品和分會各一次的演講活動安排，<br />
+    同時明年開始負責台東荒野“週五見“，<br />
+    每月在誠品和分會各一次的演講活動安排，<br />
     若您願意來台東誠品或荒野台東分會分享您的生命與經歷，<br />
     這裡可以招待您，但您需要自付交通費，同時沒有演講費哦！<br />
 
