--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -29,7 +29,7 @@
 <body>
   <a href='/'><img class='site-flag' src='/images/texture/flag.png' /></a>
   <div class='container'>
-    <header class='container'>
+    <header>
       <nav class='navbar pull-right'>
         <div class='collapse navbar-collapse navbar-ex1-collapse'>
           <ul class='nav navbar-nav'>
