--- a/views/locations.ejs
+++ b/views/locations.ejs
@@ -3,23 +3,22 @@
 <% stylesheet('/stylesheets/locations.css') -%>
 
 <div class='row'>
-  <section class='col-md-8 col-sm-8'>
+  <section class='col-md-12 col-sm-1'>
     <h4><i class='icon-map-marker'></i> Google 地圖</h4>
 
     <div id='map'></div>
   </section>
 
-  <section class='col-md-4 col-sm-4'>
+  <!-- <section class='col-md-4 col-sm-4'>
     <h4><i class='icon-twitter'></i> 如何抵達</h4>
 
     <br />
 
-    <ul class='icons-ul'>
-      <li><i class='icon-li icon-hand-right'></i>從火車站，...</li>
-      <br />
-      <li><i class='icon-li icon-hand-right'></i>從飛機場，...</il>
-    </ul>
-  </section>
+    <i class='icon-li icon-hand-right'></i> 從火車站，...
+    <br />
+    <i class='icon-li icon-hand-right'></i> 從飛機場，...
+
+  </section> -->
 </div>
 
 
