--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -5,14 +5,14 @@
 
 .intro-img {
   opacity: .7;
-  -webkit-transition: all 0.2s ease-in;
+  /*-webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;*/
 }
 
 .intro-img:hover {
   opacity: 1;
-  -webkit-transition: all 0 ease-in;
+  /*-webkit-transition: all 0 ease-in;
   -moz-transition: all 0 ease-in;
-  -o-transition: all 0 ease-in;
+  -o-transition: all 0 ease-in;*/
 }
