--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,11 @@ section > h4 {
   margin-bottom: 10px;
 }
 
+#content {
+  width: 98%;
+  margin-top: 115px;
+}
+
 .site-flag {
   position: absolute;
   margin-top: -145px;
@@ -67,7 +72,6 @@ section > h4 {
 .navbar .nav > .active > a,
 .navbar .nav > .open > a,
 .navbar .nav > li > a:hover {
-  /*font-size: 1.2em !important;*/
   color: black !important;
 }
 
@@ -86,11 +90,6 @@ section > h4 {
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
   margin-bottom: 10px;
-}
-
-#content {
-  width: 98%;
-  margin-top: 4%;
 }
 
 .navbar-nav {
@@ -113,4 +112,8 @@ section > h4 {
   background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
   background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
   border: 0;
+}
+
+.text-em {
+  color: blue;
 }
