--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -1,2 +1,161 @@
 <% layout('boilerplate') -%>
-hello world!
+<% stylesheet('/stylesheets/booking.css') -%>
+
+<section class='row'>
+  <section class='col-md-6 col-sm-6'>
+    <h4><i class='icon-legal'></i> 訂金說明</h4>
+
+    <span class='text-em'>本民宿之訂金價格為折扣後總額之 30%</span><br /><br />
+
+    <table class='table'>
+      <tbody>
+        <tr>
+          <td class='pull-right'>匯款銀行</td>
+          <td>台灣土地銀行台東分行</td>
+        </tr>
+        <tr>
+          <td class='pull-right'>代號</td>
+          <td>005</td>
+        </tr>
+        <tr>
+          <td class='pull-right'>帳號</td>
+          <td>037-008-08271-6</td>
+        </tr>
+        <tr>
+          <td class='pull-right'>帳戶名稱</td>
+          <td>程書珍</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <hr class='soften'>
+
+    <section>
+      <h4><i class='icon-warning-sign'></i> 相關法規</h4>
+
+      民國 99 年 1 月，交通部正式公告「觀光旅館業、旅館業、民宿個別旅客直接訂房定型化契約範本」，針對個別旅客透過網際網路、電話、傳真等方式直接向旅店訂房的訂金收取與解約退費做了明確的規定，<span class='text-em'>訂金不得高於首日房價的百分之三十</span>。消費者解約時，依時間遠近退還一定比例的訂金：<br />
+      <ol>
+        <li>14 天前解約，退訂金 100%</li>
+        <li>10 ~ 13 天前解約，退訂金 70%</li>
+        <li>7 ~ 9 天前解約，退訂金 50%</li>
+        <li>2 ~ 3 天前解約，退訂金 30%</li>
+        <li>1 天前解約，退訂金 20%</li>
+        <li>當日解約，業者得收取全部訂金</li>
+      </ol>
+
+      如果遇到不可抗力情況，如颱風、地震等等，不可歸責於消費者的情況時，應退訂金 100%。
+    </section>
+  </section>
+
+  <section class='col-md-6 col-sm-6'>
+    <h4><i class='icon-pencil'></i> 訂房資料</h4>
+
+    <blockquote>事先提醒您，<span class='text-em'><strong>您所預約的時間不一定有空房</strong></span>，送出表格之後，我們會在 24 小時之內與您聯絡！(當同一時間有多人預約時，將以填表時間優先順序決定)</blockquote>
+
+    <form class='form-horizontal' action='doBooking' method='post' role='form'>
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='name'>姓名</label>
+        <div class='form-inline'>
+          <div class='col-md-4 col-sm-4'>
+            <input type='text' class='form-control' name='name' placeholder='Name' required />
+          </div>
+
+          <div class='col-md-3 col-sm-4'>
+            <select class='form-control' id='sex' name='sex'>
+              <option value='先生'>先生</option>
+              <option value='小姐'>小姐</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='phone'>電話</label>
+
+        <div class='form-inline'>
+          <div class='col-md-5 col-sm-6'>
+            <input type='tel' class='form-control' name='phone' placeholder='Phone Number' required />
+          </div>
+        </div>
+      </div>
+
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='email'>E-mail</label>
+
+        <div class='form-inline'>
+          <div class='col-md-8 col-sm-8'>
+            <input type='email' class='form-control' name='email' placeholder='E-mail Address' />
+          </div>
+        </div>
+      </div>
+
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='housetype'>房間類型</label>
+
+        <div class='form-inline'>
+          <div class='col-md-5 col-sm-6'>
+            <select class='form-control' name='housetype'>
+              <optgroup label='老舍。軌'>
+                <option value='老舍軌 - 通舖'>通舖</option>
+              </optgroup>
+              <optgroup label='五十藍'>
+                <option value='五十藍 - 雙人雅房'>雙人雅房</option>
+                <option value='五十藍 - 四人雅房'>四人雅房</option>
+                <option value='五十藍 - 上下舖'>上下舖 (背包客型)</option>
+              </optgroup>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='numguest'>人數</label>
+
+        <div class='form-inline'>
+          <div class='col-md-3 col-sm-4'>
+            <input type='number' class='form-control' name='numguest' min='1' max='20' step='1' required />
+          </div>
+        </div>
+      </div>
+      
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='checkin'>Check In</label>
+
+        <div class='form-inline'>
+          <div class='col-md-6 col-sm-7'>
+            <input type='date' class='form-control' name='checkin' required />
+          </div>
+        </div>
+      </div>
+    
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='checkin'>Check Out</label>
+
+        <div class='form-inline'>
+          <div class='col-md-6 col-sm-7'>
+            <input type='date' class='form-control' name='checkout' required />
+          </div>
+        </div>
+      </div>
+    
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4' for='other'>備註</label>
+
+        <div class='form-inline'>
+          <div class='col-md-9 col-sm-8'>
+            <textarea class='form-control' name='other' placeholder='幫忙安排行程、加床等或是其他住房問題請在此提出'></textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class='form-group'>
+        <label class='control-label col-md-3 col-sm-4'></label>
+        <div class='form-inline'>
+          <div class='col-md-4 col-sm-5'>
+            <button type='submit' class='form-control btn btn-primary'><i class='icon-ok'></i> 按此送出</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </section>
+</section>
