--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
   <div class='col-md-7 col-sm-7'>
     <h4><i class='icon-road'></i> 心路歷程</h4>
 
-    <p>最近我做了一個重大的決定，辭掉工作準備中年轉業，<br />
+    <p>最近柚子我做了一個重大的決定，辭掉工作準備中年轉業，<br />
     至於為什麼做了這個決定，主要是體悟生命無常，不想以後有所遺憾，<br />
     比如最近準備和一批老友一起去爬山，<br />
     年輕時沒時間沒錢，老了再來爬，但體力不行，<br />
