--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -60,7 +60,7 @@
     <hr class='soften'>
 
     <footer class='text-center'>
-      <i class='icon-user'></i> 柚子 (Jennifer) · <i class='icon-phone'></i> 0922-337519
+      <i class='icon-user'></i> 柚子 (Jennifer) · <i class='icon-phone'></i> 0922-337519 · <i class='icon-facebook-sign'></i> <a href='http://www.facebook.com/RailwayHouse1966'>粉絲專頁</a>
       <div class='pull-right'>Copyright © 2013 Railway House, All Rights Reserved.</div>
     </footer>
   </div>
