--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -3,7 +3,7 @@
 
 <section class='row'>
   <section class='col-md-6 col-sm-6'>
-    <h4><i class='icon-legal'></i> 訂金說明</h4>
+    <h4><i class='icon-legal'></i> 訂金資訊</h4>
 
     <span class='text-em'>本民宿之訂金價格為折扣後總額之 30%</span><br /><br />
 
@@ -119,7 +119,7 @@
       </div>
       
       <div class='form-group'>
-        <label class='control-label col-md-3 col-sm-4' for='checkin'>Check In</label>
+        <label class='control-label col-md-3 col-sm-4' for='checkin'>進房時間</label>
 
         <div class='form-inline'>
           <div class='col-md-6 col-sm-7'>
@@ -129,7 +129,7 @@
       </div>
     
       <div class='form-group'>
-        <label class='control-label col-md-3 col-sm-4' for='checkin'>Check Out</label>
+        <label class='control-label col-md-3 col-sm-4' for='checkin'>退房時間</label>
 
         <div class='form-inline'>
           <div class='col-md-6 col-sm-7'>
