--- a/views/cautions.ejs
+++ b/views/cautions.ejs
@@ -1,2 +1,68 @@
 <% layout('boilerplate') -%>
-hello world!
+
+<section class='row'>
+  <section class='col-md-6 col-sm-6'>
+    <h4><i class='icon-time'></i> 住房守則</h4>
+
+    <table class='table table-bordered table-hover'>
+      <tr>
+        <td>#</td>
+        <td class='text-center'>內容</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>進房時間下午 3:00 以後，退房時間中午 11:00 以前。</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>退房時間於 12:00 後至下午 3:00 前則加收半日房假，超過下午 3:00 後則加收一日房價。</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>訂房確認後，人數請勿自行增加，若有變動請事先告知，加床每床酌收 NT$ 400。</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>晚上 10:00 以後請勿大聲喧嘩。</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>房間內禁止飲食、吸菸、嚼食口香糖及檳榔。</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>請愛惜房內及公用物品，並保持整潔。若物品損壞或遺失，須照價賠償。</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>自行保管貴重物品，屋主不負責保管責任。</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>wifi 帳密公布於房內牆壁上，請勿任意更改。</td>
+      </tr>
+    </table>
+  </section>
+
+  <section class='col-md-6 col-sm-6'>
+    <h4><i class='icon-suitcase'></i> 行前準備</h4>
+
+    <table class='table table-bordered table-hover'>
+      <tr>
+        <td>#</td>
+        <td class='text-center'>內容</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>本民宿只提供沐浴乳及洗髮乳，其餘盥洗用品及毛巾請自備。</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>晚上蚊蟲較多，將提供蚊香及紫雲膏，但還是自備防蚊液以備不時之需。</td>
+      <tr>
+        <td>3</td>
+        <td>台東是個豔陽高照的地方，請準備防曬乳。</td>
+      </tr>
+    </table>
+  </section>
+</section>
