--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,12 @@
 <% stylesheet('/stylesheets/index.css') -%>
 
 <section>
-  <h4><i class='icon-th-list'></i> 公告</h4>
+  <h4><i class='icon-bullhorn'></i> 公告</h4>
 
-  <ul class='icons-ul'>
-    <li><i class='icon-li icon-double-angle-right'></i><span id='announce'>即日起至 2013/10/31，訂房即享八折優惠，並將贈送神祕小禮物一份！</span></li>
+  <ul class='icons-ul' id='announce'>
+    <li><i class='icon-li icon-double-angle-right'></i>學生、荒野保護協會志工及 NGO 組織員工，憑證即享房價 9 折優惠！</li>
+    <li><i class='icon-li icon-double-angle-right'></i>續住第二夜起房價享 9 折優惠 (第一天原價計算)</li>
+    <li><i class='icon-li icon-double-angle-right'></i>即日起至 2013/10/31，訂房即享八折優惠，並將贈送神祕小禮物一份！</li>
   </ul>
 </section>
 
