--- a/views/cautions.ejs
+++ b/views/cautions.ejs
@@ -66,3 +66,13 @@
     </table>
   </section>
 </section>
+
+<hr class='soften'>
+
+<section class='row'>
+  <div class='col-md-4 col-sm-4'></div>
+  
+  <div class='col-md-4 col-sm-4'>
+    <a href='/booking'><button type='button' class='form-control btn btn-success'><i class='icon-shopping-cart'></i> 立即線上訂房</button></a>
+  </div>
+</section>
