--- a/views/locations.ejs
+++ b/views/locations.ejs
@@ -4,7 +4,7 @@
 
 <div class='row'>
   <section class='col-md-12 col-sm-12'>
-    <h4><i class='icon-map-marker'></i> Google 地圖</h4>
+    <h4><i class='icon-globe'></i> Google 地圖</h4>
 
     <div id='map'></div>
   </section>
