--- a/views/scenes.ejs
+++ b/views/scenes.ejs
@@ -1,2 +1,71 @@
 <% layout('boilerplate') -%>
-hello world!
+
+<section class='row'>
+  <h4><i class='icon-tags'></i> 景點介紹</h4>
+
+  <div class='col-md-12 col-sm-12'>
+    <section class='row'>
+      <h4 class='text-center'><a href='http://www.nmp.gov.tw/'>史前博物館</a></h4>
+
+      <div class='col-md-4 col-sm-5'>
+        <img class='intro-img' height=214px src='/images/scenes/1.png' />
+      </div>
+
+      <div class='col-md-4 col-sm-7'>
+        史前博物館是國內博物館中環境最為優美，展示最具本土特色的博物館，其第一期展示讓我們瞭解到台灣的自然史、史前史，及台灣南島民族的文化與發展，充分展出台灣史前和原住民文化的菁華。下午 5:00 及晚上 8:00 還有水舞表演，很適合全家大小一起來觀賞！
+      </div>
+    </section>
+    
+    <section class='row'>
+      <h4 class='text-center'><a href='http://taitung.forest.gov.tw/taitung/zhiben/main.htm'>知本森林遊樂區</a></h4>
+
+      <div class='col-md-4'></div>
+
+      <div class='col-md-4 col-sm-7'>
+        知本森林遊樂區地處台東縣卑南鄉溫泉村，知本溪流經森林遊樂區南側。區內山巒疊翠、林木蓊鬱。其中以鳥類資源最為豐富，是台東市郊賞鳥的最佳據點。植物則以原生之觀賞花木為主，且有大片純林，是遊樂區內主要森林景觀。另外園內設有好漢坡、野餐桌椅、森林浴步道、榕蔭步道、水流腳底按摩步道等，供遊客到此放鬆身心，享受大自然的樂趣，是個無論體力好或差都能享受森林氣氛的地方。
+      </div>
+
+      <div class='col-md-4 col-sm-5'>
+        <img class='intro-img' height=214px src='/images/scenes/2.png' />
+      </div>
+    </section>
+    
+    <section class='row'>
+      <h4 class='text-center'>台東森林公園</a></h4>
+
+      <div class='col-md-4 col-sm-5'>
+        <img class='intro-img' height=214px src='/images/scenes/3.png' />
+      </div>
+
+      <div class='col-md-4 col-sm-7'>
+        「台東森林公園」擁有大片面積廣大的木麻黃防風保安林地，又因為木麻黃顏色較深，由遠處望去相當黝黑，因此又有「黑森林」的別稱，台東縣政府將這片 "黑森林" 與 "海濱公園" 的綠意串連在一起，規劃成為「台東森林公園」。這片連串起來的休閒綠地，是台東市區最大型的公園、鄰近一帶最完整的生態區，同時也是運動休閒的最佳場所，是來到台東市遊玩最炙手可熱的遊憩景點。
+      </div>
+    </section>
+    
+    <section class='row'>
+      <h4 class='text-center'><a href='http://tw.streetvoice.com/users/tiehua/'>鐵花村音樂部落。慢市集</a></h4>
+
+      <div class='col-md-4'></div>
+
+      <div class='col-md-4 col-sm-7'>
+        從海洋到縱谷，從家鄉到遠方，音樂是旅人最親密的伴侶，也是最深刻的鄉愁台東，是原住民音樂創作最豐沛的地方。我們在台鐵局的舊宿舍區，與在地的音樂人和藝術工作者打造了一個人文空間。這裡是音樂創作者的美麗舞台，更是旅人在台東的夜間好去處從週三到週日，每天晚上都有音樂演出，有 70% 是以台東當地團體為主，從鐵花村流瀉出的音樂中，可以感受山海環抱的壯闊、原民傳統的感動、恣意生活的熱情和年輕創作的活力。
+      </div>
+      
+      <div class='col-md-4 col-sm-5'>
+        <img class='intro-img' height=214px src='/images/scenes/4.png' />
+      </div>
+    </section>
+    
+    <section class='row'>
+      <h4 class='text-center'>杉原海水浴場</h4>
+
+      <div class='col-md-4 col-sm-5'>
+        <img class='intro-img' height=214px src='/images/scenes/5.png' />
+      </div>
+
+      <div class='col-md-4 col-sm-7'>
+        杉原海水浴場位於都蘭灣南端，為東部海岸僅有的金色沙灘，海水清澈平靜，沙質細緻，海灘長達一點五公里，每年五月到九月底開放遊客戲水。海灘呈微弧形，曾多次舉辦大型帆船競賽，是台東縣帆船活動基地。南北兩端海域的海底珊瑚和魚類資源豐富，也是潛水的好去處。
+      </div>
+    </section>
+  </div>
+</section>
