--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -13,10 +13,10 @@
   <%-stylesheets%>
   <link href='/stylesheets/style.css' rel='stylesheet' type='text/css' />
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
-  <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css'>
+  <link href='/stylesheets/bootstrap.min.css' rel='stylesheet'>
   <link href='/stylesheets/font-awesome/css/font-awesome.min.css' rel='stylesheet' />
-  <script type='text/javascript' src='/javascripts/jquery-2.0.3.min.js'></script>
-  <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js'></script>
+  <script src='/javascripts/jquery-2.0.3.min.js' type='text/javascript'></script>
+  <script src='/javascripts/bootstrap.min.js' type='text/javascript'></script>
 
 
   <script>
